k8s/microservices/order_generation/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-generation
spec:
  selector:
    matchLabels:
      app: order-generation
  template:
    metadata:
      labels:
        app: order-generation
    spec:
      containers:
        - name: order-generation
          image: spyker77/eda-order_generation:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250"
