k8s/microservices/order_generation/service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-generation
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: order-generation
