k8s/microservices/order_generation/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: order-generation
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localhost`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: order-generation
          port: 8000
      middlewares:
        - name: ratelimiter
